// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prioritizes loading complete over currently loading 1`] = `
<div>
  <View
    as="div"
    display="auto"
    padding="small"
    textAlign="center"
  >
    <View
      display="block"
      margin="small"
    >
      <TV
        aria-hidden="true"
        height="157"
        role="img"
        viewBox="0 0 174 157"
        width="174"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </View>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
    >
      Beginning of Your To-Do History
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      size="medium"
    >
      You've scrolled back to your very first To-Do!
    </Text>
  </View>
</div>
`;

exports[`renders TV when all past items loaded 1`] = `
<div>
  <View
    as="div"
    display="auto"
    padding="small"
    textAlign="center"
  >
    <View
      display="block"
      margin="small"
    >
      <TV
        aria-hidden="true"
        height="157"
        role="img"
        viewBox="0 0 174 157"
        width="174"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </View>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
    >
      Beginning of Your To-Do History
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      size="medium"
    >
      You've scrolled back to your very first To-Do!
    </Text>
  </View>
</div>
`;

exports[`renders spinner while loading 1`] = `
<div>
  <View
    as="div"
    display="auto"
    padding="medium small small small"
    textAlign="center"
  >
    <Spinner
      as="div"
      margin="0 x-small 0 0"
      size="small"
      title="Loading past items"
      variant="default"
    />
    <Text
      as="span"
      color="secondary"
      letterSpacing="normal"
      size="small"
    >
      Loading past items
    </Text>
  </View>
</div>
`;

exports[`renders very little 1`] = `<div />`;

exports[`shows an Alert when there's a query error 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "0 auto",
        "width": "50%",
      }
    }
  >
    <ErrorAlert
      error="uh oh"
    >
      Error loading past items
    </ErrorAlert>
  </div>
</div>
`;
